添加04数组拓展

--- a/docs/courses/java/basic/01-Java基础入门/03-数组.md
+++ b/docs/courses/java/basic/01-Java基础入门/03-数组.md
@@ -8,7 +8,7 @@ tags:
  - Java
  - 基础
  - JDK
- - 数据类型
+ - 数组
 ---
 
 # 数组
@@ -94,6 +94,29 @@ arrayRefVar[index] = value
 ::: warning **注意**💡 
 
 按照数组下标取值，如果当前下标不存在，则 `Java` 会抛 `java.lang.ArrayIndexOutOfBoundsException` (数组下标越界异常)
+
+:::
+
+## 二维数组
+
+```java
+// 普通数组声明方式
+int[] arr = new int[10]; // 声明一个大小为10的数组
+
+// 二维数组声明方式
+int[] arr = new int [2][5] // 可以看成一个两行五列的数组
+ 
+```
+
+图解：
+
+![](https://raw.githubusercontent.com/Noah2Y/img/main/blog/20240624193237.png)
+
+以上是一个 `arr[1][1]` 的二维数组图解。其中 `arr[0]` 包括了`arr[0][0]` 与  `arr[0][1]` 两个元素，`arr[1]` 包括了`arr[1][0]` 与  `arr[1][1]` 两个元素
+
+::: warning **注意**💡 
+
+二维数值直接打印输出的结果是地址值，因为二维数组里面本身也是一个数组。在上一章中讲到了数值本身就是对象。
 
 :::
 
