完善JVM初探文章

--- a/docs/courses/java/advance/03-JVM/04-方法区.md
+++ b/docs/courses/java/advance/03-JVM/04-方法区.md
@@ -16,7 +16,7 @@ tags:
 
 方法区(Method Area) 是JVM内存模型中一个重要的内存区域，他用于存储已加载的类信息、常量、静态变量、即时编译器编译后的代码(即JIT编译后的代码)等数据。方法区是所有线程共享的内存区域。
 
-## 主要内用
+## 主要内容
 
 1. **类信息:** 每个被加载的类或者接口的元数据，包括类的名称、父类信息、接口信息、方法和字段的信息等。
 2. **常量池:** 包括类中的常量，如字符串常量、数值常量和方法引用、字段引用等。
