--- a/docs/courses/java/advance/03-JVM/05-栈.md
+++ b/docs/courses/java/advance/03-JVM/05-栈.md
@@ -27,9 +27,12 @@ Java栈是由多个栈帧(Stack Frame)组成的。每当一个方法被调用时
    - 用于执行字节码指令时，临时存储操作数。
    - 通过出栈和入栈操作进行计算。
 3. **动态链接(Dynamic Linking)**
-   - 包括方法的引用，用于支持方法调用和返回。
+   - 每个栈帧都包含一个指向运行时常量池中该栈帧所属方法的引用，用于支持方法调用和返回。
 4. **方法返回地址(Return Address)**
-   - 存储方法调用后返回的位置
+   - **方法返回指令:** 执行引擎遇到一个方法返回的字节码指令，这时候有可能会有返回值传递给上层的方法调用者，这种退出方式称为正常完成出口
+   - **异常退出:** 在方法执行过程中遇到了异常，并且没有处理这个异常，就会导致方法退出。
+
+![](https://raw.githubusercontent.com/Noah2Y/img/main/blog/20240704181803.jpg)
 
 ## 特点
 
