--- a/docs/courses/java/advance/03-JVM/04-方法区.md
+++ b/docs/courses/java/advance/03-JVM/04-方法区.md
@@ -31,7 +31,7 @@ tags:
 
 ## 元空间
 
-在Java 8以后的版本中，方法区的实现由永久代变味元空间。元空间在本质上依然是方法区，只是存储的位置从JVM中移到了本地内存中。
+在Java 8以后的版本中，方法区的实现由永久代变为元空间。元空间在本质上依然是方法区，只是存储的位置从JVM中移到了本地内存中。
 
 ## 优点
 
