--- a/docs/courses/java/advance/03-JVM/06-堆.md
+++ b/docs/courses/java/advance/03-JVM/06-堆.md
@@ -36,12 +36,12 @@ Java堆通常分为三个主要区域：新生代(Young Generation)、老年代(
    新生代用于存储新创建的对象，大部分对象在新生代中创建并很快被垃圾收集器回收。新生代分为三个区域:
 
    - **伊甸区(Eden):** 新对象在Eden区分配内存。
-   - **两个幸存区(Survivor0和Survivor1):** 用于在Minor GC(年轻代垃圾回收)，时存活对象的复制。
+   - **两个幸存区(Survivor0和Survivor1):** 用于在Minor GC(年轻代垃圾回收)时存活对象的复制。
 
    在Eden区和两个Survivor区之间进行对象的复制和移动，以便于在Minor GC时回收内存。
 
 2. **老年代(Old Generation):**
-   老年代用于存储生命周期较长的对象。经过多次Minor GC 仍然存活的对象会从新生代晋升到老年代。当老年代内存不足时，会吃法 Major GC(老年代垃圾回收)，这通常是耗时较长的一次回收。
+   老年代用于存储生命周期较长的对象。经过多次Minor GC 仍然存活的对象会从新生代晋升到老年代。当老年代内存不足时，触发 Major GC(老年代垃圾回收)，这通常是耗时较长的一次回收。
 
 3. **永久代/元空间(Permanent Generation / Metaspace):** 
    永久代(在Java 8之前)或元空间(从Java 8 开始) 用于存储类的元数据、方法信息、常量池和JIT编译后的代码。
