--- a/docs/courses/java/advance/04-JUC/04-8锁现象.md
+++ b/docs/courses/java/advance/04-JUC/04-8锁现象.md
@@ -10,4 +10,364 @@ tags:
 ---
 # 8锁现象
 
-[[toc]]
+8锁现象就是关于锁的8个问题, 便于让我们理解如何判断锁的是谁.
+
+## 1.标准情况下谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        new Thread(phone::sendSms, "A").start();
+        
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        
+        new Thread(phone::call, "B").start();
+    }
+
+}
+
+class Phone{
+    public synchronized void sendSms(){
+        System.out.println("Sms");
+    }
+
+    public synchronized void call(){
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Sms
+Call
+```
+
+**原因:** synchronized 本质锁的对象是调用者,Call 和 Sms 都是由对象 phone 去调用,即同一个对象; 因此两个方法用的是同一个锁, 由于线程A先调用,所以线程A先拿到锁,线程B必须等待线程A执行完才能拿到锁.
+
+## 2.Sms延迟4秒,谁先打印?
+
+``` java
+public class Lock8 {
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        new Thread(phone::sendSms, "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(phone::call, "B").start();
+    }
+}
+
+class Phone {
+    public synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Sms
+Call
+```
+
+**原因:** 原因同上,就算线程A在sleep也不会释放锁.
+
+
+
+## 3.增加一个普通方法,谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        new Thread(phone::sendSms, "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(phone::call, "B").start();
+        
+        new Thread(phone::hello, "C").start();
+    }
+}
+
+class Phone {
+    public synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public synchronized void call() {
+        System.out.println("Call");
+    }
+
+    public void hello(){
+        System.out.println("Hello 8Lock");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Hello 8Lock
+Sms
+Call
+```
+
+**原因:** 因为普通方法没有加锁,当主线程睡眠1秒之后执行普通方法.
+
+## 4.使用两个对象进行调用,谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        Phone phone1 = new Phone();
+        new Thread(phone::sendSms, "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(phone1::call, "B").start();
+    }
+}
+
+class Phone {
+    public synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Call
+Sms
+```
+
+**原因:** 因为 synchronized 锁的是调用者,然后两个同步方法调用者是不同的对象,所以不存在互锁的情况.
+
+## 5.将方法改为静态方法,只有一个对象,谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        new Thread(()-> phone.sendSms(), "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(()-> phone.call(), "B").start();
+    }
+}
+
+class Phone {
+    public static synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public static synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Sms
+Call
+```
+
+**原因:**  这样看体现不出来静态方法的特点,原因在于静态方法本质锁的是类本身,与对象无关,具体请看下一个问题.
+
+## 6.问题5中增加一个对象,谁先打印?
+
+``` java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        Phone phone1 = new Phone();
+        new Thread(()-> phone.sendSms(), "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(()-> phone1.call(), "B").start();
+    }
+}
+
+class Phone {
+    public static synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public static synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Sms
+Call
+```
+
+**原因:** 因为静态方法的锁本质上锁的是Class,与对象调用者无关,所以多个对象调用同步静态方法,不会影响其执行顺序.
+
+## 7. 一个普通同步方法,一个静态同步方法,谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        new Thread(()-> phone.sendSms(), "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(phone::call, "B").start();
+    }
+}
+
+class Phone {
+    public static synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Call
+Sms
+```
+
+**原因:** 因为两者的锁不一样,普通同步方法锁的是方法调用者,即对象; 静态同步方法锁的是Class类模板.
+
+## 8. 问题7中,增加一个对象,谁先打印?
+
+```java
+public class Lock8 {
+
+    public static void main(String[] args) {
+        Phone phone = new Phone();
+        Phone phone1 = new Phone();
+
+        new Thread(()-> phone.sendSms(), "A").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+
+        new Thread(phone1::call, "B").start();
+    }
+}
+
+class Phone {
+    public static synchronized void sendSms() {
+        try {
+            TimeUnit.SECONDS.sleep(4);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        System.out.println("Sms");
+    }
+
+    public synchronized void call() {
+        System.out.println("Call");
+    }
+}
+```
+
+**结果:**
+
+```bash
+Call
+Sms
+```
+
+**原因:** 原理同问题7.
